--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
@@ -57,6 +58,12 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && git add .",
+      "commit-msg": "node commit-msg-linter.js $1"
+    }
   },
   "jest": {
     "moduleFileExtensions": [
